tests/baselines/reference/enumAssignability.errors.txt
==== tests/cases/compiler/enumAssignability.ts (24 errors) ====
    // enums assignable to number, any, Object, errors unless otherwise noted
    
    enum E { A }
    enum F { B }
    
    var e = E.A;
    var f = F.B;
    
    e = f; 
    ~
!!! enumAssignability.ts(9,1): error TS2011: Type 'F' is not assignable to type 'E'.
    f = e; 
    ~
!!! enumAssignability.ts(10,1): error TS2011: Type 'E' is not assignable to type 'F'.
    e = 1; // ok
    f = 1; // ok
    var x: number = e; // ok
    x = f; // ok
    
    module Others {
        var a: any = e; // ok
    
        class C {
            foo: string;
        }
        var ac: C;
        interface I {
            foo: string;
        }
        var ai: I;
    
        var b: number = e; // ok
        var c: string = e;
            ~~~~~~~~~~~~~
!!! enumAssignability.ts(29,9): error TS2011: Type 'E' is not assignable to type 'string'.
        var d: boolean = e;
            ~~~~~~~~~~~~~~
!!! enumAssignability.ts(30,9): error TS2011: Type 'E' is not assignable to type 'boolean'.
        var ee: Date = e;
            ~~~~~~~~~~~~
!!! enumAssignability.ts(31,9): error TS2011: Type 'E' is not assignable to type 'Date'.
        var f: any = e; // ok
        var g: void = e;
            ~~~~~~~~~~~
!!! enumAssignability.ts(33,9): error TS2011: Type 'E' is not assignable to type 'void'.
        var h: Object = e;
            ~~~~~~~~~~~~~
!!! enumAssignability.ts(34,9): error TS2011: Type 'E' is not assignable to type 'Object'.
        var i: {} = e;
            ~~~~~~~~~
!!! enumAssignability.ts(35,9): error TS2011: Type 'E' is not assignable to type '{}'.
        var j: () => {} = e;
            ~~~~~~~~~~~~~~~
!!! enumAssignability.ts(36,9): error TS2011: Type 'E' is not assignable to type '() => {}'.
        var k: Function = e;
            ~~~~~~~~~~~~~~~
!!! enumAssignability.ts(37,9): error TS2011: Type 'E' is not assignable to type 'Function'.
        var l: (x: number) => string = e;
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! enumAssignability.ts(38,9): error TS2011: Type 'E' is not assignable to type '(x: number) => string'.
        ac = e;
        ~~
!!! enumAssignability.ts(39,5): error TS2011: Type 'E' is not assignable to type 'C'.
        ai = e;
        ~~
!!! enumAssignability.ts(40,5): error TS2011: Type 'E' is not assignable to type 'I'.
        var m: number[] = e;
            ~~~~~~~~~~~~~~~
!!! enumAssignability.ts(41,9): error TS2011: Type 'E' is not assignable to type 'number[]'.
        var n: { foo: string } = e;
            ~~~~~~~~~~~~~~~~~~~~~~
!!! enumAssignability.ts(42,9): error TS2011: Type 'E' is not assignable to type '{ foo: string; }'.
        var o: <T>(x: T) => T = e;
            ~~~~~~~~~~~~~~~~~~~~~
!!! enumAssignability.ts(43,9): error TS2011: Type 'E' is not assignable to type '<T>(x: T) => T'.
        var p: Number = e;
            ~~~~~~~~~~~~~
!!! enumAssignability.ts(44,9): error TS2011: Type 'E' is not assignable to type 'Number'.
        var q: String = e;
            ~~~~~~~~~~~~~
!!! enumAssignability.ts(45,9): error TS2011: Type 'E' is not assignable to type 'String'.
    
        function foo<T, U extends T, V extends Date, A extends Number, B extends E>(x: T, y: U, z: V) {
                        ~~~~~~~~~~~
!!! enumAssignability.ts(47,21): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            x = e;
            ~
!!! enumAssignability.ts(48,9): error TS2011: Type 'E' is not assignable to type 'T'.
            y = e;
            ~
!!! enumAssignability.ts(49,9): error TS2011: Type 'E' is not assignable to type 'U'.
            z = e;
            ~
!!! enumAssignability.ts(50,9): error TS2011: Type 'E' is not assignable to type 'V'.
            var a: A = e;
                ~~~~~~~~
!!! enumAssignability.ts(51,13): error TS2011: Type 'E' is not assignable to type 'A'.
            var b: B = e;
                ~~~~~~~~
!!! enumAssignability.ts(52,13): error TS2011: Type 'E' is not assignable to type 'B'.
        }
    }